2024-09-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wait-for-regexp): Use (sit-for 0) in order to
	avoid performace regression.

2024-09-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wait-for-regexp): Add (sit-for 0.005) prior
	calling `tramp-accept-process-output'.  This avoids 100% CPU load.
	(Bug#73046)

2024-09-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name*): Embed `function-put' calls with
	`tramp--with-startup'.
	(tramp-active-command-completion-p)
	* tramp-cache.el (tramp-get-hash-table): Remove declare form.  Add
	`tramp-suppress-trace' function property.

2024-08-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-mode): Make it a defvar.  People shouldn't
	customize it manually.

2024-08-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-active-command-completion-p): New defun.

	* tramp-cmds.el (tramp-cleanup-connection)
	(tramp-cleanup-all-connections, tramp-cleanup-some-buffers)
	(tramp-cleanup-all-buffers, tramp-rename-files):
	* tramp-message.el (tramp-setup-debug-buffer):
	Declare `completion'.

	* tramp-integration.el (tramp-info-link): New widget.
	(tramp-widget-info-link-action): New defun.

	* tramp.el (tramp, tramp-mode, tramp-backup-directory-alist)
	(tramp-auto-save-directory, tramp-encoding-shell)
	(tramp-encoding-command-switch)
	(tramp-encoding-command-interactive, tramp-default-method)
	(tramp-default-method-alist, tramp-default-user)
	(tramp-default-user-alist, tramp-default-host)
	(tramp-default-host-alist, tramp-default-proxies-alist)
	(tramp-save-ad-hoc-proxies, tramp-show-ad-hoc-proxies)
	(tramp-restricted-shell-hosts-alist, tramp-local-host-regexp)
	(tramp-shell-prompt-pattern, tramp-password-prompt-regexp)
	(tramp-otp-password-prompt-regexp, tramp-wrong-passwd-regexp)
	(tramp-terminal-type, tramp-syntax)
	(tramp-ignored-file-name-regexp, tramp-chunksize)
	(tramp-process-connection-type, tramp-remote-path)