@@ -1,3 +1,7 @@
+2024-09-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-otp-password-prompt-regexp): Add TACC HPC prompt.
+
 2024-09-21  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-wait-for-regexp): Use (sit-for 0) in order to
